# xfce4-verve-plugin

./: .gitignore  AUTHORS  ChangeLog  Makefile.am  NEWS  README  README.md  THANKS  TODO  autogen.sh  configure.ac  configure.ac.in  configure.in.in  meson.build
panel-plugin/: Makefile.am  meson.build  verve-completion.c  verve-completion.h  verve-dbus-service-infos.h  verve-dbus-service-infos.xml  verve-dbus-service.c  verve-dbus-service.h  verve-env.c  verve-env.h  verve-history.c  verve-history.h  verve-plugin.c  verve.c  verve.desktop.in  verve.desktop.in.in  verve.h  xfce4-verve-plugin.desktop.in
po/: ChangeLog  LINGUAS  Makefile.am  POTFILES.in  ar.po  ast.po  be.po  bg.po  ca.po  cs.po  da.po  de.po  el.po  en_AU.po  en_CA.po  en_GB.po  eo.po  es.po  et.po  eu.po  fi.po  fr.po  fr_CH.po  gl.po  he.po  hr.po  hu.po  hy_AM.po  hye.po  id.po  ie.po  is.po  it.po  ja.po  kk.po  ko.po  lo.po  lt.po  lv.po  ms.po  (+28 more)
scripts/: Makefile.am  verve-focus  verve-focus.c  verve-focus.py
src/: verve-db.h  verve-history.c  verve-history.h
tests/: Makefile.am  test.c  verve-test.c
verve/: verve-db.c  verve-env.c  verve-env.h  verve-history.c  verve.c  verve.h
